--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,18 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async="true" src="https://www.googletagmanager.com/gtag/js?id=G-YYFPM2HCXJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YYFPM2HCXJ');
+  </script>
   <meta charset="UTF-8">
   <base href="/">
-  <title>DSpace</title>
+  <title>Rice University Digital Scholarship Archive</title>
   <meta name="viewport" content="width=device-width,minimum-scale=1">
   <meta http-equiv="cache-control" content="no-store">
 </head>
